--- a/tdd-oop-bobs-bagels.CSharp.Source/tdd-oop-bobs-bagels.CSharp.Source.csproj
+++ b/tdd-oop-bobs-bagels.CSharp.Source/tdd-oop-bobs-bagels.CSharp.Source.csproj
@@ -1,8 +1,8 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <OutputType>Exe</OutputType>
     <TargetFramework>net7.0</TargetFramework>
+    <RootNamespace>tdd_oop_bobs_bagels.CSharp.Source</RootNamespace>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
