written first test

--- a/tdd-oop-bobs-bagels.CSharp.Main/tdd-oop-bobs-bagels.CSharp.Main.csproj
+++ b/tdd-oop-bobs-bagels.CSharp.Main/tdd-oop-bobs-bagels.CSharp.Main.csproj
@@ -13,4 +13,8 @@
     <PackageReference Include="NUnit3TestAdapter" Version="4.4.2" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\csharp-tdd-oop-bobs-bagels-Csharp-Classes\csharp-tdd-oop-bobs-bagels-Csharp-Classes.csproj" />
+  </ItemGroup>
+
 </Project>
