--- a/csharp-tdd-oop-bobs-bagels.Source/csharp-tdd-oop-bobs-bagels.Source.csproj
+++ b/csharp-tdd-oop-bobs-bagels.Source/csharp-tdd-oop-bobs-bagels.Source.csproj
@@ -1,14 +1,10 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <OutputType>Exe</OutputType>
     <TargetFramework>net7.0</TargetFramework>
+    <RootNamespace>csharp_tdd_oop_bobs_bagels.Source</RootNamespace>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
-
-  <ItemGroup>
-    <ProjectReference Include="..\csharp-tdd-oop-bobs-bagels.Source\csharp-tdd-oop-bobs-bagels.Source.csproj" />
-  </ItemGroup>
 
 </Project>
