--- a/tdd-oop-bobs-bagels.CSharp.Test/tdd-oop-bobs-bagels.CSharp.Test.csproj
+++ b/tdd-oop-bobs-bagels.CSharp.Test/tdd-oop-bobs-bagels.CSharp.Test.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net7.0</TargetFramework>
@@ -7,7 +7,13 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\tdd-oop-bobs-bagels.CSharp.Main\tdd-oop-bobs-bagels.CSharp.Main.csproj" />
+    <PackageReference Include="microsoft.net.test.sdk" Version="17.5.0" />
+    <PackageReference Include="nunit" Version="3.13.3" />
+    <PackageReference Include="NUnit3TestAdapter" Version="4.4.2" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\csharp-tdd-oop-bobs-bagels.Source\csharp-tdd-oop-bobs-bagels.Source.csproj" />
   </ItemGroup>
 
 </Project>
