refactored the tests and created a console to display menu and basket

--- a/tdd-oop-bobs-bagels.CSharp.Main/tdd-oop-bobs-bagels.CSharp.Main.csproj
+++ b/tdd-oop-bobs-bagels.CSharp.Main/tdd-oop-bobs-bagels.CSharp.Main.csproj
@@ -7,4 +7,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\tdd-oop-bobs-bagels.CSharp.Source\tdd-oop-bobs-bagels.CSharp.Source.csproj" />
+  </ItemGroup>
+
 </Project>
