Discount and simple receipt created + classes refactored

--- a/exercise.main/exercise.main.csproj
+++ b/exercise.main/exercise.main.csproj
@@ -8,7 +8,9 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="1.cs" />
     <Compile Remove="Information.cs" />
+    <Compile Remove="Receipt.cs" />
   </ItemGroup>
 
 </Project>
