--- a/exercise.main/exercise.main.csproj
+++ b/exercise.main/exercise.main.csproj
@@ -7,4 +7,16 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Compile Remove="TwilioController.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Include="TwilioController.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Twilio" Version="7.2.2" />
+  </ItemGroup>
+
 </Project>
