--- a/exercise.main/exercise.main.csproj
+++ b/exercise.main/exercise.main.csproj
@@ -11,4 +11,8 @@
     <Folder Include="Bobs-bagels\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Twilio" Version="7.2.2" />
+  </ItemGroup>
+
 </Project>
