--- a/exercise.main/exercise.main.csproj
+++ b/exercise.main/exercise.main.csproj
@@ -9,6 +9,7 @@
 
   <ItemGroup>
     <PackageReference Include="system.speech" Version="8.0.0" />
+    <PackageReference Include="Twilio" Version="7.2.2" />
   </ItemGroup>
 
 </Project>
