Need to make Basket work for all products again.

--- a/exercise.main/exercise.main.csproj
+++ b/exercise.main/exercise.main.csproj
@@ -7,4 +7,9 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Folder Include="Classes\Products\Coffes\" />
+    <Folder Include="Classes\Products\Fillings\" />
+  </ItemGroup>
+
 </Project>
