core, forgot to commit along the way

--- a/exercise.main/exercise.main.csproj
+++ b/exercise.main/exercise.main.csproj
@@ -7,4 +7,9 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Folder Include="UI\" />
+    <Folder Include="Utils\" />
+  </ItemGroup>
+
 </Project>
