--- a/exercise.main/exercise.main.csproj
+++ b/exercise.main/exercise.main.csproj
@@ -7,4 +7,9 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Configuration.EnvironmentVariables" Version="9.0.0" />
+    <PackageReference Include="Twilio" Version="7.8.2" />
+  </ItemGroup>
+
 </Project>
